routing and initalOrange

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      you gonna need to enable JavaScript to view this blarg.
     </noscript>
     <div id="root"></div>
   </body>
